# python-project-52

./: .gitignore  Makefile  README.md  mydatabase  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
auth/: urls.py  views.py
auth/fixtures/: users.json
auth/tests/: test_users_crud.py
config/: settings.py  urls.py  wsgi.py
locale/ru/LC_MESSAGES/: django.mo  django.po  djangojs.po
task_manager/: __init__.py  settings.py  urls.py  utils.py  wsgi.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: apps.py  filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html
task_manager/templates/components/: footer.html  navbar.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
templates/: base.html  index.html  user_create.html  user_delete.html  user_update.html
templates/components/: footer.html  form.html  navbar.html
templates/task_manager/labels/: label_create.html  label_delete.html  label_list.html  label_update.html
templates/task_manager/statuses/: status_create.html  status_delete.html  status_list.html  (+1 more)
(+10 files in other folders)
