[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager for common purposes"
authors = ["Yaroslav Pekatoros <y.pekatoros@gmail.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python",
    "Programming Language :: SQL",
    "Database :: PostgreSQL",
    "Topic :: Software Development :: Task Manager"
]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
pytest-django = "^4.5.2"
psycopg = "^3.1.8"
dj-database-url = "0.5.0"
django-bootstrap4 = "^23.1"
psycopg2-binary = "^2.9.6"
django-filter = "^23.2"
rollbar = "^0.16.3"
django-coverage = "^1.2.4"
coverage = "^7.2.5"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
flake8 = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
